added group project to portfolio list

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ h2{
     margin: 10px;
 }
 
+.h3-portfolio{
+    margin-left: 10px;
+}
+.p-portfolio{
+    margin-left: 10px;
+}
 
 
 /* XS SCREENS*/
