--- a/css/style-navbar.css
+++ b/css/style-navbar.css
@@ -6,7 +6,7 @@ h1{
     margin: 0;
     padding: 14px;
     text-align: center;
-    background-color: #ff6b6b;
+    background-color: #3034BA;
     margin-left: 5%;
     max-width: 350px;
     
@@ -14,7 +14,7 @@ h1{
 
 /* Making links white */
 nav a{
-    color:#f7fff7;
+    color:#ffffff;
 }
 nav a:hover{
     color: #5d5c61;
@@ -34,7 +34,7 @@ nav a:hover{
 /* styling links and surrounding area*/
 .navbar-styling{
     text-align: center;
-    background-color: #ffe66d;
+    background-color: #BA110B;
     padding: 0;
     margin: 0;
 }
