--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@
 /* USED ON ALL PAGES */
 /* setting background color and padding to allow for copyright bar to not overlap with content */
 body{
-    background-color: #4ecdc4;
+    background-color: #191414; 3034BA 1DB954
     padding-bottom: 120px;
 }
 
 /* line between heading and content on all pages*/
 hr{
     /* color: #7395AE;  */
-    background-color: #f7fff7; 
+    background-color: #ffffff; 
     height: 2px;
 }
 
@@ -31,18 +31,18 @@ h2{
     float: left;
     margin-left: 2.5%;
     width: 70%;
-    background-color: #1a535c;
+    background-color: #BA110B;
     /* border-color: red; */
     border-width: 15px;
     margin-bottom: 15%;
-    color: #f7fff7;
+    color: #ffffff;
 }
 
 a{
-    color: #ff6b6b;
+    color: #3034BA;
 }
 a:hover{
-    color: #ffe66d;
+    color: #ffffff;
 }
 
 
