updating mobile navbar

--- a/css/style-navbar.css
+++ b/css/style-navbar.css
@@ -49,7 +49,7 @@ nav a:hover{
 
     /* filling the background of the h1 tag to stretch the color across the screen on mobile */
     .col-xs-styling{
-        background-color: #ffe66d;
+        background-color: #BA110B;
     }
 
     /* reposition links from the right of h1 to below on mobile */
